--- a/src/css/VpnRedBox.css
+++ b/src/css/VpnRedBox.css
@@ -12,7 +12,7 @@
 }
 
 .red-box-image {
-  width: 100%;         /* Adjust as needed */
+  width: 100%;         
   height: auto;
-  margin-bottom: 16px; /* Space between image and text */
+  margin-bottom: 16px; 
 }
