--- a/src/css/WhereGetVpn.css
+++ b/src/css/WhereGetVpn.css
@@ -2,4 +2,5 @@
   text-align: center;
    font-size: 1.50rem;        /* ✅ Increase font size (20px) */
   font-family: sans-serif;
+  padding: 2%;
 }
