--- a/src/css/AdminDashboard.css
+++ b/src/css/AdminDashboard.css
@@ -11,3 +11,13 @@ h1 {
   text-align: center;
   padding-top: 1rem;
 }
+.create-article-link {
+  margin-top: 3rem;
+  color: #10b981; 
+  font-size: 2rem;
+ }
+
+ .create-article-link:hover {
+  color: black;
+ }
+
